Working on 100xdev homepage section responsiveness

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </style>
 </head>
 <body>
-    <h1>Cohort 3.0 projects</h1>
+    <h1>Cohort 3.0 Assigments</h1>
     <ul>
         <li><a href="./week-2/100xdevs/index.html">100xsite</a></li>
         <li><a href="./week-2/center-div/index.html">center div</a></li>
