--- a/week-2/100xdevs/index.html
+++ b/week-2/100xdevs/index.html
@@ -12,6 +12,10 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@4.8.0/fonts/remixicon.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>100xDevs</title>
   </head>
@@ -84,26 +88,183 @@
           </div>
         </section>
         <section class="header-3">
-            <div class="highlight-part-1">
-                <h2>Job ready skills that matter</h2>
-                <p>Master development through real-world applications, not tutorials</p>
-                <div class="skill-box">
-                    <p>Full Stack Development</p>
-                    <p>Real-World Projects</p>
-                    <p>Open Source Contributions</p>
-                    <p>Production Ready</p>
-                    <p>DevOps & Deployment</p>
-                    <p>Job Ready Portfolio</p>
-                </div>
+          <div class="highlight-part-1">
+            <h2>Job ready skills that matter</h2>
+            <p>
+              Master development through real-world applications, not tutorials
+            </p>
+            <div class="skill-box">
+              <p>Full Stack Development</p>
+              <p>Real-World Projects</p>
+              <p>Open Source Contributions</p>
+              <p>Production Ready</p>
+              <p>DevOps & Deployment</p>
+              <p>Job Ready Portfolio</p>
             </div>
-            <div class="highlight-part-2">
-                <h2>Personally mentoring India's next 100x engineers</h2>
-                <p>Taking you from 1x to 100x through practical projects and real-world open source</p>
-            </div>
+          </div>
+          <div class="highlight-part-2">
+            <h2>Personally mentoring India's next 100x engineers</h2>
+            <p>
+              Taking you from 1x to 100x through practical projects and
+              real-world open source
+            </p>
+          </div>
         </section>
       </header>
+      <div class="page section-1">
+        <div class="part-1">
+          <h2>Why 100xDevs?</h2>
+          <p>Our most comprehensive and impactful learning experiences</p>
+        </div>
+        <div class="part-2">
+          <div class="swiper mySwiper">
+            <div class="shadow shadow-left"></div>
+            <div class="shadow shadow-right"></div>
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="slider-icon">
+                  <svg
+                    width="25"
+                    heigth="25"
+                    viewBox="0 -30 290 360"
+                    id="Flat"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M86.749,44.29492,33.48242,128,86.749,211.70508a7.99973,7.99973,0,1,1-13.498,8.58984l-56-88a7.99826,7.99826,0,0,1,0-8.58984l56-88a7.99973,7.99973,0,0,1,13.498,8.58984Zm152,79.41016-56-88a7.99973,7.99973,0,0,0-13.498,8.58984L222.51758,128,169.251,211.70508a7.99973,7.99973,0,1,0,13.498,8.58984l56-88A7.99826,7.99826,0,0,0,238.749,123.70508Z"
+                    />
+                  </svg>
+                </div>
+                <h3>Real Engineer, Real Experience</h3>
+                <div class="slider-line"></div>
+                <p>
+                  Learn from Harkirat Singh who has built & scaled real-world
+                  systems at top tech companies.
+                </p>
+              </div>
+              <div class="swiper-slide">
+                <div class="slider-icon">
+                  <svg
+                    width="25"
+                    heigth="25"
+                    viewBox="0 -30 290 360"
+                    id="Flat"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M86.749,44.29492,33.48242,128,86.749,211.70508a7.99973,7.99973,0,1,1-13.498,8.58984l-56-88a7.99826,7.99826,0,0,1,0-8.58984l56-88a7.99973,7.99973,0,0,1,13.498,8.58984Zm152,79.41016-56-88a7.99973,7.99973,0,0,0-13.498,8.58984L222.51758,128,169.251,211.70508a7.99973,7.99973,0,1,0,13.498,8.58984l56-88A7.99826,7.99826,0,0,0,238.749,123.70508Z"
+                    />
+                  </svg>
+                </div>
+                <h3>Learn by Doing</h3>
+                <div class="slider-line"></div>
+                <p>
+                  Hands-on projects, open-source contributions & practical
+                  coding. Build payment systems, automation tools & end-to-end
+                  applications.
+                </p>
+              </div>
+              <div class="swiper-slide">
+                <div class="slider-icon">
+                  <svg
+                    width="25"
+                    heigth="25"
+                    viewBox="0 -30 290 360"
+                    id="Flat"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M86.749,44.29492,33.48242,128,86.749,211.70508a7.99973,7.99973,0,1,1-13.498,8.58984l-56-88a7.99826,7.99826,0,0,1,0-8.58984l56-88a7.99973,7.99973,0,0,1,13.498,8.58984Zm152,79.41016-56-88a7.99973,7.99973,0,0,0-13.498,8.58984L222.51758,128,169.251,211.70508a7.99973,7.99973,0,1,0,13.498,8.58984l56-88A7.99826,7.99826,0,0,0,238.749,123.70508Z"
+                    />
+                  </svg>
+                </div>
+                <h3>Job-Ready Curriculum</h3>
+                <div class="slider-line"></div>
+                <p>
+                  Master DSA, System Design, DevOps & scalable full-stack
+                  skills. From JavaScript to MERN stack & blockchain
+                  technologies.
+                </p>
+              </div>
+              <div class="swiper-slide">
+                <div class="slider-icon">
+                  <svg
+                    width="25"
+                    heigth="25"
+                    viewBox="0 -30 290 360"
+                    id="Flat"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M86.749,44.29492,33.48242,128,86.749,211.70508a7.99973,7.99973,0,1,1-13.498,8.58984l-56-88a7.99826,7.99826,0,0,1,0-8.58984l56-88a7.99973,7.99973,0,0,1,13.498,8.58984Zm152,79.41016-56-88a7.99973,7.99973,0,0,0-13.498,8.58984L222.51758,128,169.251,211.70508a7.99973,7.99973,0,1,0,13.498,8.58984l56-88A7.99826,7.99826,0,0,0,238.749,123.70508Z"
+                    />
+                  </svg>
+                </div>
+                <h3>Career Support & Community</h3>
+                <div class="slider-line"></div>
+                <p>
+                  Personalized career guidance, mock interviews, access to top
+                  hiring partners & a supportive community of ambitious
+                  learners.
+                </p>
+              </div>
+              <div class="swiper-slide">
+                <div class="slider-icon">
+                  <svg
+                    width="25"
+                    heigth="25"
+                    viewBox="0 -30 290 360"
+                    id="Flat"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M86.749,44.29492,33.48242,128,86.749,211.70508a7.99973,7.99973,0,1,1-13.498,8.58984l-56-88a7.99826,7.99826,0,0,1,0-8.58984l56-88a7.99973,7.99973,0,0,1,13.498,8.58984Zm152,79.41016-56-88a7.99973,7.99973,0,0,0-13.498,8.58984L222.51758,128,169.251,211.70508a7.99973,7.99973,0,1,0,13.498,8.58984l56-88A7.99826,7.99826,0,0,0,238.749,123.70508Z"
+                    />
+                  </svg>
+                </div>
+                <h3>Lifetime Access</h3>
+                <div class="slider-line"></div>
+                <p>
+                  Lifetime access to course assignments & one-year access to
+                  session recordings for continuous learning at your pace.
+                </p>
+              </div>
+              <div class="swiper-slide">
+                <div class="slider-icon">
+                  <svg
+                    width="25"
+                    heigth="25"
+                    viewBox="0 -30 290 360"
+                    id="Flat"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M86.749,44.29492,33.48242,128,86.749,211.70508a7.99973,7.99973,0,1,1-13.498,8.58984l-56-88a7.99826,7.99826,0,0,1,0-8.58984l56-88a7.99973,7.99973,0,0,1,13.498,8.58984Zm152,79.41016-56-88a7.99973,7.99973,0,0,0-13.498,8.58984L222.51758,128,169.251,211.70508a7.99973,7.99973,0,1,0,13.498,8.58984l56-88A7.99826,7.99826,0,0,0,238.749,123.70508Z"
+                    />
+                  </svg>
+                </div>
+                <h3>Live Interactive Sessions</h3>
+                <div class="slider-line"></div>
+                <p>
+                  Learn in real-time with weekend live sessions, interactive
+                  Q&A, and direct mentorship from industry experts.
+                </p>
+              </div>
+            </div>
+            <div>
+              <div class="swiper-button-next swiper-btn swiper-next">
+               <i class="ri-arrow-right-line"></i>
+              </div>
+              <div class="swiper-button-prev swiper-btn swiper-prev">
+                <i class="ri-arrow-left-line"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
